Fixed email link on mobile

--- a/src/components/style/Hero.css
+++ b/src/components/style/Hero.css
@@ -63,9 +63,10 @@
     right: -700px;
     width: 700px;
     height: 700px;
-    z-index: -1;
+    z-index: -2;
     opacity: 0.9;
     animation: background 10s infinite;
+    pointer-events: none;
 }
 .heroText {
     width: 665px;
@@ -87,7 +88,6 @@
     width: 260px;
     display: flex;
     justify-content: space-between;
-
 }
 .link {
     color: #939393;
@@ -118,9 +118,6 @@
         right: -114.5vw;
         width: 130vw;
         height: 130vw;
-        z-index: -1;
-        opacity: 0.9;
-        animation: background 10s infinite;
     }
     .heroText {
         width: 78.11vw;
