--- a/src/components/style/ProjectIcon.css
+++ b/src/components/style/ProjectIcon.css
@@ -9,6 +9,7 @@
     height: 40px;
     background-color: transparent;
     transition: transform 0.3s ease;
+    pointer-events: none;
 }
 .icon:hover{
     transform: scale(1.1);
